--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-accelerate==1.6.0
-diffusers==0.33.1
-transformers==4.46.2
-gradio==5.23.0
-sentencepiece==0.2.0
-pillow==11.1.0
-av==12.1.0
-numpy==1.26.2
-scipy==1.12.0
-requests==2.31.0
-torchsde==0.2.6
-
-einops
-opencv-contrib-python
-safetensors
+torch>=2.2.0
+torchvision>=0.17.0
+accelerate>=1.6.0
+diffusers>=0.33.1
+transformers>=4.46.2
+gradio>=5.23.0
+sentencepiece>=0.2.0
+pillow>=11.1.0
+av>=12.1.0
+numpy>=1.26.2
+scipy>=1.12.0
+requests>=2.31.0
+torchsde>=0.2.6
+einops>=0.8.0
+opencv-python>=4.10.0
+safetensors>=0.4.5
+tqdm>=4.67.1
+pandas>=2.2.3
+matplotlib>=3.8.0
+lpips>=0.1.4
+# vbench>=1.0.0  # Optional: Requires manual installation or complex dependencies
